2009-06-23  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkCanvUtil.c fix [Bug #220935] canvas dash update problem

2009-06-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c:   [Bug 2799589] Backported fix for crash on
	* tests/winWm.test: delayed window activation.

2009-05-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinMenu.c: [Bug 2794778]: Backported fix for keyboard
	traversal of the menus on Windows.

2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkButton.c: [Bug 1923684]: backported checkbutton fix
	for confused state when -offvalue equals -tristatevalue

2009-05-14  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/ttk_image.n:  Backported support for the Vista theme.
	* doc/ttk_style.n:  This requires the vsapi element engine,
	* doc/ttk_vsapi.n:  the hover state and the theme script
	* doc/ttk_widget.n: definition.
	* generic/ttk/ttkState.c:
	* generic/ttk/ttkTheme.h:
	* generic/ttk/ttkWidget.c:
	* library/ttk/ttk.tcl:
	* library/ttk/vistaTheme.tcl:
	* library/ttk/xpTheme.tcl:
	* tests/ttk/vsapi.test:
	* win/ttkWinXPTheme.c:

2009-05-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/tkFont.c: [Bug 2791352]: backported fix and tests for
	* tests/font.test:  mis-parsing of certain font descriptions.

2009-05-03  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinWm.c (UpdateWrapper): [Bug 2785744]: Manipulate flag bit
	correctly so that menubar updates can't smash other attributes.

2009-04-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: [Patch 2504402]: Backported change to create
	wm icons as device independent bitmaps. (cjmcdonald)

2009-04-30  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinPixmap.c (Tk_GetPixmap): [Bug 2080533]: Added patch that
	allows Tk to keep working even when the graphics card is stressed.

2009-04-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/tcl.m4, unix/configure (SC_CONFIG_CFLAGS): harden the check